--- a/templates/checkout/checkout_success.html
+++ b/templates/checkout/checkout_success.html
@@ -22,20 +22,189 @@
 <!-- <div class="container-cart"> -->
 <!-- <div class="container product-overlay"> -->
 <div class="container mb-2">
-    <div class="row">
+    <div class="row p">
         <div class="col">
             <hr>
             <h2 class="aw mb-4 text-center">
                 Thank you
             </h2>
-            <p class="text-center ">A confirmation email has been sent to {{  order.email }}</p>
+
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-12 col-lg-7"></div>
+    <div class="row order-wrap">
+        <div class="col-12 col-lg-7">
+            <div class="order-succes-wrapper p-2 border rounded-15">
+                <p class="text-center ">Your confirmation email has been sent to <br>{{  order.email }}</p>
+                <div class="row ">
+                    <div class="col">
+                        <small class="text-muted text-center aw">Your Order</small>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 text-black aw">Order Number</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-right">
+                        <small class="mb-0">{{ order.order_number }}</small>
+                    </div>
+                </div>
+
+                <div class="row ">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 text-black aw">Date Ordered</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-right">
+                        <p class="mb-0">{{ order.date }}</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col">
+                        <small class="text-muted text-center aw">Order Details:</small>
+                    </div>
+                </div>
+
+                {% for item in order.lineitems.all %}
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="small mb-0 text-black font-weight-bold">
+                            {{ item.product.name }}
+                            {% if item.product_size %} - Size
+                            {{ item.product.size|upper }}
+                            {% endif %}
+                        </p>
+                    </div>
+                    <div class="col-12 col-md-8 text-md-right">
+                        <p class="small mb-0">{{ item.quantity }} @ ${{ item.product.price }} each</p>
+                    </div>
+                </div>
+                {% endfor %}
+
+                <div class="row">
+                    <div class="col">
+                        <small class="text-muted aw">Delivering To:</small>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 text-black aw aw">Full Name:</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-right">
+                        <p class="mb-0">{{ order.full_name }}</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 text-black aw">Address 1:</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-right">
+                        <p class="mb-0">{{ order.street_address1 }}</p>
+                    </div>
+                </div>
+
+                {% if order.street_address2 %}
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 text-black aw">Address 2:</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-right">
+                        <p class="mb-0">{{ order.street_address2 }}</p>
+                    </div>
+                </div>
+                {% endif %}
+
+                {% if order.county %}
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 text-black aw">County:</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-right">
+                        <p class="mb-0">{{ order.county }}</p>
+                    </div>
+                </div>
+                {% endif %}
+
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 text-black aw">Town or City:</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-right">
+                        <p class="mb-0">{{ order.town_or_city }}</p>
+                    </div>
+                </div>
+
+                {% if order.postcode %}
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 text-black aw">Postal Code:</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-right">
+                        <p class="mb-0">{{ order.postcode }}</p>
+                    </div>
+                </div>
+                {% endif %}
+
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 text-black aw">Country:</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-right">
+                        <p class="mb-0">{{ order.country }}</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 text-black aw">Phone Number:</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-right">
+                        <p class="mb-0">{{ order.phone_number }}</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col">
+                        <small class="aw text-muted text-center">Billing Info:</small>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 text-black aw">Order Total:</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-right">
+                        <p class="mb-0 aw">{{ order.order_total }}</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 aw">Delivery:</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-right">
+                        <p class="mb-0 aw">{{ order.delivery_cost }}</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 aw ">Grand Total:</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-right">
+                        <p class="mb-0 aw">{{ order.grand_total }}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+<!-- <div class="spinner-border" role="status">
+    <span class="sr-only">Loading...</span>
+</div> -->
 
 
 {% endblock content %}
