--- a/templates/checkout/checkout_success.html
+++ b/templates/checkout/checkout_success.html
@@ -202,9 +202,13 @@
         </div>
     </div>
 </div>
-<!-- <div class="spinner-border" role="status">
-    <span class="sr-only">Loading...</span>
-</div> -->
+<div id="loading-overlay">
+    <h1 class="text-light logo-font loading-spinner">
+        <span class="icon">
+            <i class="fas fa-3x fa-sync-alt fa-spin"></i>
+        </span>
+    </h1>
+</div>
 
 
 {% endblock content %}
