--- a/static/css/checkout.css
+++ b/static/css/checkout.css
@@ -47,7 +47,7 @@ select option {
 
 select:invalid,
 select option[value=""] {
-    color: #aab7c4 !important;
+    color: #7a7c7e !important;
 }
 
 #loading-overlay {
