--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
                 <li class="nav-item dropdown">
                     <a class="mx-3 text-wht dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        My Bashboard
+                        My Dashboard
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         {% if request.user.is_authenticated %}
