--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -5,11 +5,23 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+<div class="pass-change">
+    <div class="container p-5">
+        <div class="login-overlay mx-auto">
+            <div class="row login-row">
+                <div class="col-12 p-4">
+                    <div class="allauth-form-inner-content ">
+                        <h1>{% trans "Change Password" %}</h1>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-    </form>
+                        <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <button type="submit" name="action">{% trans "Change Password" %}</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
