--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,6 +59,22 @@ p {
   background-color: rgba(0, 0, 0, 0.6);
 }
 
+.minus-block {
+  color: black;
+  background-color: rgb(231, 49, 63);
+  border: 1px solid black;
+}
+
+.add-block {
+  color: black;
+  background-color: rgb(27, 216, 125);
+  border: 1px solid black;
+}
+
+.border-bk {
+  border: 1px solid black;
+}
+
 .bs-5 {
   box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
 }
@@ -86,6 +102,8 @@ p {
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
+
+
 
 .rounded-15 {
   border-radius: 15px;
