--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -158,10 +158,10 @@
                                 <div class="card-body pb-0">
                                     <p class="aw text-center">{{ product.name }}</p>
                                 </div>
-                                <div class="card-footer bg-white pt-0 border-0 text-left">
+                                <div class="card-footer bg-white pt-0 border-0 text-center">
                                     <div class="row ">
                                         <div class="col">
-                                            <p class="lead mb-0 text-left aw">${{ product.price }}</p>
+                                            <p class="lead mb-0  aw">${{ product.price }}</p>
                                             {% if product.category %}
                                             <p class="small mt-1 mb-0">
                                                 <a class="text-muted"
