--- a/templates/products/products_detail.html
+++ b/templates/products/products_detail.html
@@ -55,34 +55,34 @@
                         <div class="form-row">
                             {% with product.has_sizes as s %}
                             {% if s %}
-                            <div class="col-12">
-                                <p><strong>Size:</strong></p>
-                                <select class="form-control rounded-0 w-50" name="product_size" id='id_product_size'>
-                                    <option value="xs">XS</option>
-                                    <option value="s">S</option>
-                                    <option value="m" selected>M</option>
-                                    <option value="l">L</option>
-                                    <option value="xl">XL</option>
+                            <div class="col-12 mt-2">
+                                <p class="aw"><strong>Size:</strong></p>
+                                <select class="form-control rounded-2 w-75" name="product_size" id='id_product_size'>
+                                    <option class="aw" value="xs">XS</option>
+                                    <option class="aw" value="s"> S</option>
+                                    <option class="aw" value="m" selected> M</option>
+                                    <option class="aw" value="l"> L</option>
+                                    <option class="aw" value="xl">XL</option>
                                 </select>
                             </div>
                             {% endif %}
-                            <div class="col-12">
-                                <p class="mt-3"><strong>Quantity:</strong></p>
-                                <div class="form-group w-50">
+                            <div class="col-12 mx-auto">
+                                <p class="mt-3 aw"><strong>Quantity:</strong></p>
+                                <div class="form-group w-75 aw">
                                     <div class="input-group">
                                         <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-black rounded-0"
+                                            <button class="decrement-qty btn btn-black minus-block rounded-10"
                                                 data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-minus"></i>
                                                 </span>
                                             </button>
                                         </div>
-                                        <input class="form-control qty_input" type="number" name="quantity" value="1"
-                                            min="1" max="99" data-item_id="{{ product.id }}"
+                                        <input class="form-control qty_input border border-secondary " type="number"
+                                            name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}"
                                             id="id_qty_{{ product.id }}">
                                         <div class="input-group-append">
-                                            <button class="increment-qty btn btn-black rounded-0"
+                                            <button class="increment-qty btn btn-black add-block rounded-10"
                                                 data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-plus"></i>
@@ -94,14 +94,19 @@
                             </div>
 
                             <div class="col{% if s %}-12 mt-2{% endif %}">
-                                <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                                <a href="{% url 'products' %}"
+                                    class="p-2 btn btn-outline-black rounded-2 mt-5 bg-warning border-bk">
                                     <span class="icon">
-                                        <i class="fas fa-chevron-left"></i>
+                                        <i class="fad fa-store"></i>
                                     </span>
-                                    <span class="text-uppercase">Keep Shopping</span>
+                                    <span class="aw bg-warning text-uppercase">Keep Shopping</span>
                                 </a>
-                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5"
+
+                                <input type="submit"
+                                    class="btn btn-black rounded-0 text-uppercase mt-5  bg-warning border-bk"
                                     value="Add to Cart">
+
+
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             {% endwith %}
