--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -132,7 +132,7 @@
             {% else %}
             <div class="container">
                 <div class="row align-items-center">
-                    <h5 class="col-12 empty">
+                    <h5 class="col-12 empty aw">
                         There are no items in your cart.&nbsp; <a href="{% url 'products' %}"> Continue
                             Shopping</a>
                     </h5>
