--- a/templates/profiles/profile.html
+++ b/templates/profiles/profile.html
@@ -16,7 +16,7 @@
     <div class="container profile">
         <div class="profile-overlay">
             <div class="col p-4">
-                <h4 class="text-wht aw display-4 text-center"> usrname Dashboard</h4>
+                <h4 class="text-wht aw display-4 text-center"> {{ user.username }} Dashboard</h4>
             </div>
         </div>
         <div class="container">
