--- a/templates/base.html
+++ b/templates/base.html
@@ -72,11 +72,11 @@
                         {% if request.user.is_superuser %}
                         <a class="dropdown-item" href="#">Project Management</a>
                         {% endif %}
-                        <a class="dropdown-item" href="#">My Profile</a>
-                        <a class="dropdown-item" href="">Logout</a>
+                        <a class="dropdown-item" href="{% url 'profile' %}">My Profile</a>
+                        <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
                         {% else %}
-                        <a class="dropdown-item" href=""">Login</a>
-                        <a class=" dropdown-item" href="">register</a>
+                        <a class="dropdown-item" href="{% url 'account_login' %}">Login</a>
+                        <a class=" dropdown-item" href="{% url 'account_signup' %}">register</a>
                         {% endif %}
                     </div>
                 </li>
@@ -130,7 +130,7 @@
     <div class="message aw text-wht">
         {% if messages %}
         {% for message in messages %}
-        <div class="alert alert-{{ message.tags }} alert-dismissible fade show text-center mb-0" role="alert">
+        <div class="w-50  alert alert-{{ message.tags }} alert-dismissible fade show text-center mb-0" role="alert">
             <i class="fad fa-dumbbell fa-lg"></i> {{ message }} <i class="fad fa-dumbbell fa-lg"></i>
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
