--- a/templates/profiles/profile.html
+++ b/templates/profiles/profile.html
@@ -21,17 +21,20 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-12 thongs bg-black-a rounded-15">
-                    <h5 class="aw text-wht text-center">Order History</h5>
-                    <div class="product-overlay"></div>
+                <div class="col-md-4 col-12  bg-black-a rounded-15">
+                    <a href="{% url 'profile_details' %}">
+                        <h5 class="aw text-wht text-center">Shipping Details &<br>Order History</h5>
+                    </a>
+                    <div class="profile-overlay">
+                    </div>
                 </div>
-                <div class="col-md-4 col-12 thongs bg-black-a rounded-15">
+                <div class="col-md-4 col-12  bg-black-a rounded-15">
                     <h5 class="aw text-wht text-center">Favour Blogs</h5>
-                    <div class="product-overlay"></div>
+                    <div class="profile-overlay"></div>
                 </div>
-                <div class="col-md-4 col-12 thongs bg-black-a rounded-15">
+                <div class="col-md-4 col-12  bg-black-a rounded-15">
                     <h5 class="aw text-wht text-center">My Blogs</h5>
-                    <div class="product-overlay"></div>
+                    <div class="profile-overlay"></div>
                 </div>
             </div>
         </div>
