--- a/static/css/profiles.css
+++ b/static/css/profiles.css
@@ -23,7 +23,7 @@
 .profile {
     min-height: 83vh;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     flex-direction: column;
 
 }
@@ -32,4 +32,21 @@
     height: 500px;
     width: 500px;
 
+}
+
+.form-dark {
+    background-color: rgba(0, 0, 0, 1);
+    color: white;
+}
+
+.dark-btn:hover,
+.dark-btn:focus {
+    background-color: rgb(229, 206, 33);
+    color: white;
+}
+
+/*Order history*/
+.order-history {
+    max-height: 416px;
+    overflow-y: auto;
 }
