--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,12 @@
 
 <head>
 
+    <title>{% block head_title %}{% endblock %}</title>
+    {% block extra_head %}
+    {% endblock %}
+
+
+
     {% block meta %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
