added styling to main acount html pages

--- a/templates/account/account_inactive.html
+++ b/templates/account/account_inactive.html
@@ -5,7 +5,16 @@
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Account Inactive" %}</h1>
+<div class="login-pic ">
+    <div class="container about">
+        <div class="overlay">
+            <div class="col p-4">
+                <p class="text-wht aw display-3 text-center">Login</p>
+                <h1>{% trans "Account Inactive" %}</h1>
 
-<p>{% trans "This account is inactive." %}</p>
+                <p>{% trans "This account is inactive." %}</p>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
