--- a/static/css/style.css
+++ b/static/css/style.css
@@ -372,7 +372,7 @@ nav {
 
 /*About Page*/
 .about {
-  height: 83vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -396,7 +396,7 @@ nav {
 .overlay {
   position: relative;
   height: fit-content;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   border-radius: 20px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
@@ -552,21 +552,21 @@ nav {
   z-index: 0;
 }
 
-/* fullscreen background images for allauth*/
 .login-pic {
   background: url(/static/images/damir-spanic-login.jpg) no-repeat center center fixed;
   height: 100vh;
-
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-
 }
 
+
+
 .reg-pic {
-  background: url(/static/images/sven-mieke-lady-barbel.jpg) no-repeat center center fixed;
+  background: url(/static/images/javier-santos-guzman.jpg) no-repeat fixed;
   height: 100vh;
+  background-position: 50% 30%;
   /* background-color: #fff; */
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -593,6 +593,61 @@ nav {
   -o-background-size: cover;
   background-size: cover;
 }
+
+/*Profile pages*/
+#profile-pic {
+  background: url(/static/images/delaney-van-weights.jpg) no-repeat center center fixed;
+  /* background-color: #fff; */
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.profile-overlay {
+  position: relative;
+  height: fit-content;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  z-index: 0;
+}
+
+
+.profile {
+  min-height: 83vh;
+  display: flex;
+  /* justify-content: center; */
+  flex-direction: column;
+
+}
+
+.thongs {
+  height: 500px;
+  width: 500px;
+
+}
+
+.form-dark {
+  background-color: rgba(0, 0, 0, 1);
+  color: white;
+}
+
+.dark-btn:hover,
+.dark-btn:focus {
+  background-color: rgb(229, 206, 33);
+  color: white;
+}
+
+/*Order history*/
+.order-history {
+  max-height: 416px;
+  overflow-y: auto;
+}
+
 
 /* Footer */
 .footer-image {
