--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,17 +5,27 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up" %}</h1>
+<div class="reg-pic ">
+  <div class="container about">
+    <div class="overlay">
+      <div class="col p-4">
+        <p class="text-red aw display-3 text-center">Sign Up</p>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+        <p class="aw text-wht">{% blocktrans %}Already have an account? Then please <a class="text-red"
+            href="{{ login_url }}">sign
+            in</a>.{% endblocktrans %}</p>
 
+        <form class="signup aw text-wht" id="signup_form" method="post" action="{% url 'account_signup' %}">
+          {% csrf_token %}
+          {{ form|crispy }}
+          {% if redirect_field_value %}
+          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+          {% endif %}
+          <button class="rounded-10 p-2 text-wht bg-danger" type="submit">{% trans "Sign Up" %} &raquo;</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
