--- a/templates/programs/workout_detail.html
+++ b/templates/programs/workout_detail.html
@@ -1,14 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+{% load static %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
 
-<body>
-    {{ object }}
-</body>
+{% block content %}
+<div class="container-fluid bg-black">
+    <div class="row">
+        <div class="col-md-12 mb-0">
+            <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
+            <span class="mx-2 mb-0 text-wht">/</span>
+            <strong class="text-wht aw">Dashboard</strong>
+        </div>
+    </div>
+</div>
+<div id="profile-pic">
+    <div class="container profile">
+        <div class="profile-overlay">
+            <div class="col p-4">
+                <h4 class="text-wht aw display-4 text-center">Worktout Details View</h4>
 
-</html>
+                {% if object is not None %}
+                <p class="aw text-wht">{{ object.title }}</p>
+                <p class="aw text-wht">{{ object.description }}</p>
+                {% else %}
+                <h3 class="aw text-wht">Upgrade membership</h3>
+
+                {% endif %}
+
+
+            </div>
+        </div>f
+    </div>
+</div>
+{% endblock content %}
