--- a/templates/memberships/membership_list.html
+++ b/templates/memberships/membership_list.html
@@ -42,7 +42,7 @@
                 </ul>
                 <hr>
                 {% if object.membership_type != 'Free' %}
-                <form action="" method="POST">
+                <form action="{% url 'memberships:select-membership' %}" method="POST">
                     {% csrf_token %}
 
                     {% if object.membership_type != current_membership %}
