--- a/templates/blog/blog_form.html
+++ b/templates/blog/blog_form.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %}
+{% include "static" %}
 
 {% block content %}
 <div class="container">
-    <h1>Thins is the update view</h1>
+    <h1>This is the {{ view_type|title }} view</h1>
+    <form action="" method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form|crispy}}
+        <button type="submit" class="btn btn-success">{{ view_type|title }}</button>
+    </form>
 </div>
 {% endblock content %}
