--- a/templates/blog/blog_list.html
+++ b/templates/blog/blog_list.html
@@ -2,29 +2,128 @@
 
 
 {% block content %}
-<div class="container">
-    {% for object in object_list %}
-    <a href="{{ object.get_absolute_url }}">
-        <div class="card mb-3">
-            <div class="row no-gutters">
-                <div class="col-md-4">
-                    <img src="{{ object.thumbnail.url }}" class="card-img" alt="...">
-                </div>
-                <div class="col-md-8">
+
+<!-- Page Content -->
+<div class="container-fluid blog-pic">
+
+    <div class="row mx-4">
+
+        <!-- Blog Entries Column -->
+        <div class="col-md-8">
+            <div class="overlay">
+                <h1 class="my-4 aw text-wht text-center">Featured Blogs</h1>
+            </div>
+            {% for object in object_list %}
+            <!-- Blog Post -->
+            <a href="{{ object.get_absolute_url }}" class="text-bk">
+                <div class="card mb-4">
+                    <img class="card-img-top" src="{{ object.thumbnail.url }}" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">{{ object.title }}</h5>
-                        <p class="aw"> {{ object.content|truncatechars:50 }}</p>
-                        <hr>
-                        <p>
-                            <span><i class="fad fa-eye"></i> :</span><br>
-                            <span><i class="fad fa-thumbs-up"></i> :</span><br>
-                            <span><i class="fad fa-comments-alt"></i> :</span>
-                        </p>
-                    </div>
+                        <h2 class="aw card-title">{{ object.title }}</h2>
+                        <p class="card-text">{{ object.content|truncatechars:200 }}</p>
+                        <div class="row m-1">
+                            <div class="col-md-4 col-sm-12"><span><i class="fad fa-eye"></i> :</span></div>
+                            <div class="col-md-4 col-sm-12"><span><i class="fad fa-thumbs-up"></i> :</span><br></div>
+                            <div class="col-md-4 col-sm-12"><span><i class="fad fa-comments-alt"></i> :</span></div>
+                        </div>
+            </a>
+        </div>
+        <div class="card-footer text-muted">
+            Posted on: {{ object.publish_date}} by <strong>{{ object.author }}</strong>
+        </div>
+    </div>
+    {% endfor %}
+    <!-- Blog Post -->
+
+
+    <!-- Blog Post -->
+
+
+    <!-- Pagination -->
+    <ul class="pagination justify-content-center mb-4">
+        <li class="page-item">
+            <a class="page-link" href="#">&larr; Older</a>
+        </li>
+        <li class="page-item disabled">
+            <a class="page-link" href="#">Newer &rarr;</a>
+        </li>
+    </ul>
+
+</div>
+
+<!-- Sidebar Widgets Column -->
+<div class="col-md-4">
+
+    <!-- Search Widget -->
+    <div class="card my-4">
+        <h5 class="aw card-header">Search</h5>
+        <div class="card-body">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search for...">
+                <span class="input-group-append">
+                    <button class="aw  btn btn-secondary" type="button">Go!</button>
+                </span>
+            </div>
+        </div>
+    </div>
+
+    <!-- Categories Widget -->
+    <div class="card my-4">
+        <h5 class="aw card-header">Categories</h5>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-lg-6">
+                    <ul class="list-unstyled mb-0">
+                        <li>
+                            <a href="#">Web Design</a>
+                        </li>
+                        <li>
+                            <a href="#">HTML</a>
+                        </li>
+                        <li>
+                            <a href="#">Freebies</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-6">
+                    <ul class="list-unstyled mb-0">
+                        <li>
+                            <a href="#">JavaScript</a>
+                        </li>
+                        <li>
+                            <a href="#">CSS</a>
+                        </li>
+                        <li>
+                            <a href="#">Tutorials</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
-    </a>
-    {% endfor %}
+    </div>
+
+    <!-- Side Widget -->
+    <div class="card my-4 bg-trans">
+        <div class="overlay">
+            <h5 class="aw card-header text-wht text-center">All Blogs</h5>
+        </div>
+        {% for object in object_list %}
+        <div class="overlay">
+            <div class="card-body ">
+                <a href="{{ object.get_absolute_url }}">
+                    <h5 class="aw text-center text-wht">{{ object.title }}</h5>
+                    <p class="text-wht">{{ object.content|truncatechars:50 }}</p>
+                </a>
+            </div>
+        </div>
+        {% endfor %}
+
+    </div>
+
 </div>
+<!-- /.row -->
+
+</div>
+<!-- /.container -->
+
 {% endblock content %}
