finished the login behind the blog pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -100,7 +100,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item " href="{% url 'about' %}">About</a>
                         <a class="dropdown-item" href="{% url 'products' %}">Shop</a>
-                        <a class="dropdown-item" href="#">Blog</a>
+                        <a class="dropdown-item" href="{% url 'blog:list' %}">Blog</a>
                         <a class="dropdown-item" href="{% url 'contact' %}">Contact Us</a>
                     </div>
                 </li>
