--- a/templates/blog/blog_form.html
+++ b/templates/blog/blog_form.html
@@ -4,10 +4,10 @@
 {% block content %}
 <div class="container">
     <h1>This is the {{ view_type|title }} view</h1>
-    <form action="" method="POST" enctype="multipart/form-data">
+    <form action="" method="POST" class="aw" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|crispy}}
-        <button type="submit" class="btn btn-success">{{ view_type|title }}</button>
+        <button type="submit" class=" mb-4 btn btn-success">{{ view_type|title }}</button>
     </form>
 </div>
 {% endblock content %}
