--- a/templates/blog/blog_form.html
+++ b/templates/blog/blog_form.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container">
-    <h1>This is the {{ view_type|title }} view</h1>
+    <h1 class="aw">{{ view_type|title }} Blog</h1>
     <form action="" method="POST" class="aw" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|crispy}}
