--- a/templates/blog/blog_detail.html
+++ b/templates/blog/blog_detail.html
@@ -23,10 +23,12 @@
             <p class="lead">
                 by: {{ object.author|title }}
 
+                {% if  user.is_authenticated and user == blog.author %}
                 <span><a class="font-small ml-3 mb-0 text-grn" href="{{ object.get_update_url }}"> (Edit)</a></span>
                 <span class="font-small mb-0 text-bk">/</span>
                 <span><a class="font-small mb-0 text-red" href="{{ object.get_delete_url }}"> (Delete)</a></span>
 
+                {% endif %}
             </p>
 
             <hr>
